---------------------------------------------------------------------------
Version 3.19.7 (rgerhards), 2008-06-??
- added new property replacer option "date-subseconds" that enables
  to query just the subsecond part of a high-precision timestamp
---------------------------------------------------------------------------
Version 3.19.6 (rgerhards), 2008-06-06
- enhanced property replacer to support multiple regex matches
- bugfix: part of permittedPeer structure was not correctly initialized
  thanks to varmojfekoj for spotting this
- bugfix: off-by-one bug during certificate check
- bugfix: removed some memory leaks in TLS code
---------------------------------------------------------------------------
Version 3.19.5 (rgerhards), 2008-05-30
- enabled Posix ERE expressions inside the property replacer
  (previously BRE was permitted only)
- provided ability to specify that a regular expression submatch shall
  be used inside the property replacer
- implemented in property replacer: if a regular expression does not match,
  it can now either return "**NO MATCH** (default, as before), a blank
  property or the full original property text
- enhanced property replacer to support multiple regex matches
---------------------------------------------------------------------------
Version 3.19.4 (rgerhards), 2008-05-27
- implemented x509/certvalid gtls auth mode
- implemented x509/name gtls auth mode (including wildcards)
- changed fingerprint gtls auth mode to new format fingerprint
- protected gtls error string function by a mutex. Without it, we
  could have a race condition in extreme cases. This was very remote,
  but now can no longer happen.
- changed config directive name to reflect different use
  $ActionSendStreamDriverCertFingerprint is now
  $ActionSendStreamDriverPermittedPeer and can be used both for
  fingerprint and name authentication (similar to the input side)
- bugfix: sender information (fromhost et al) was missing in imudp